Centralize MockRaftActorSnapshotCohort methods
We have 4 implementations doing the same thing. Use default methods to
reduce duplication.

JIRA: CONTROLLER-2134
Change-Id: I3969590e94b2d138ac665221d7d31b0f0ac3a064
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>